--- a/prediction/templates/choix/index.html
+++ b/prediction/templates/choix/index.html
@@ -11,21 +11,21 @@
                 <h2 class="title2">Modèle 1</h2>
                 <p>Un modèle qui classe les propositions politiques en trois grandes familles.</p>
                 <div class="btn">
-                    <a href="{% url 'prediction' %}"><span>J'essaye ce modèle</span></a>
+                    <a href="{% url 'prediction_m1' %}"><span>J'essaye ce modèle</span></a>
                   </div>
             </div>
             <div class="card">
                 <h2 class="title2">Modèle 2</h2>
                 <p>Ce modèle ajoute de la nuances entre les sensibilités politiques.</p>
                 <div class="btn">
-                    <a href=""><span>J'essaye ce modèle</span></a>
+                    <a href="{% url 'prediction_m2' %}"><span>J'essaye ce modèle</span></a>
                   </div>
             </div>
             <div class="card">
                 <h2 class="title2">Modèle 3</h2>
                 <p>Un modèle complet qui permet une lecture plus fine du spectre politique.<br></p>
                 <div class="btn">
-                    <a href=""><span>J'essaye ce modèle</span></a>
+                    <a href="{% url 'prediction_m3' %}"><span>J'essaye ce modèle</span></a>
                   </div>
             </div>
         </div>
