--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,7 +30,7 @@ aside {
 .content-wrap {
   width: 73%;
   margin-left: auto;
-  padding: 0 5rem;
+  padding: 1rem 5rem;
 
 }
 
@@ -214,4 +214,39 @@ aside {
 .exploration-part.active-item:hover {
   background-color: #1f3027;
   cursor: default;
+}
+
+.modal-dialog {
+  margin: auto;
+  width: 60%;
+  position: relative;
+  outline: inherit;
+  border: none;
+  border-radius: 0.5rem;
+
+;
+   img {
+       height: 90dvh;
+     display: block;
+  margin-left: auto;
+  margin-right: auto;
+    }
+
+  .close-button {
+    position: absolute;
+    top: 1rem;
+    right: 1.5rem;
+    font-size: 1.5rem;
+    background: none;
+	color: #62666c;
+	border: none;
+	padding: 0;
+	cursor: pointer;
+	outline: inherit;
+  }
+
+  .close-button:hover{
+    color: #18be61;
+    transition: ease-in-out 0.2s;
+  }
 }
